# typography

./: .gitignore  README.md  pyproject.toml
src/: catalogue.html  categoty_1.html  contacts.html  home_page.html  main.py
