[tool.poetry]
name = "po"
version = "0.1.0"
description = ""
authors = ["Ekaterina <ekaterina.kuz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
